[package]
name = "chirp8-sdl"
version = "0.2.0"
authors = ["Dr. ERDI Gergo <gergo@erdi.hu>"]

[dependencies]
sdl2 = { version = "0.35.2", default-features = false, features = ["gfx"] }
crossbeam = "0.2.12"
chirp8-engine = { path="chirp8-engine" }
clap = { version = "4.4.11", features = ["derive"] }
